--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: white;
+  color: black;
   padding: 20px;
 }
 
